--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 body {
-    background-image: url(../assets/icon.webp);
+    background-image: url(../assets/icon.png);
+
+    /*background-image: url(../assets/pixil-frame-0.png);*/
    
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -7,15 +9,11 @@ body {
 
 
 
-#blog {
-    /*color: red;*/
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-}
+
 
 .blogs {
     width: 160px;
-    height: 170px;
+    height: 180px;
     cursor: pointer;
     box-shadow: 2px 2px 10px;
     margin-bottom: 10px;
@@ -24,10 +22,7 @@ body {
 img {
     width: 160px;
     height: 100px;
-    
 }
 
-.blog_titles {
-    
-    /*color: #1bd7c7;*/
-}
+
+
